--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-6 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-6 col-sm-3 align-self-center">
+                    <a role="button" class="btn-sm btn-warning text-decoration-none" href="#Reserve">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -55,7 +58,7 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">Hot</span>  <span class="badge badge-pill badge-dark">$420.69</span></h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span>  <span class="badge badge-pill badge-dark">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
@@ -71,7 +74,7 @@
             <div class="col col-sm col-md">
                  <div class="media">
                     <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet</h2>
+                        <h2 class="mt-0">Weekend Grand Buffet  <span class="badge badge-danger">NEW</span></h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
                      <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
@@ -94,7 +97,58 @@
                 </div>
             </div>
         </div>
-    </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form id="Reserve">
+                            <div class="form-group row">
+                                <div class="col-12 col-sm-2"><label for="Number of Guests" class="form-label">Number of Guests</label></div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt1" value="opt1">
+                                            <label class="form-check-label" for="opt1">1</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt2" value="opt2">
+                                            <label class="form-check-label" for="opt2">2</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt3" value="opt3">
+                                            <label class="form-check-label" for="opt3">3</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt4" value="opt4">
+                                            <label class="form-check-label" for="opt4">4</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt5" value="opt5">
+                                            <label class="form-check-label" for="opt5">5</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt6" value="opt6">
+                                            <label class="form-check-label" for="opt6">6</label>
+                                        </div>
+                                </div>
+                                <div class="form-group row">
+                                <label for="date" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-7 col-md-5">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-5 col-md-5">
+                                <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form">
+                                <button type="submit" class="btn btn-primary offset-2">Reserve</button>
+                            </div>
+                            </form>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <footer class="footer">
         <div class="container">
