--- a/index.html
+++ b/index.html
@@ -29,9 +29,51 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-book"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in">  Login
+                        </span>
+                    </a>
+                </span>
             </div>
         </div>   
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body"> 
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4"> 
+                                <input type="email" class="form-control-sm mr-1" id="emailinput" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <input type="password" class="form-control-sm mr-1" id="pwinput" placeholder="Enter Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -43,7 +85,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-6 col-sm-3 align-self-center">
-                    <a role="button" class="btn-sm btn-warning text-decoration-none" href="#Reserve">Reserve Table</a>
+                    <a role="button" class="btn-sm btn-warning text-decoration-none" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+91 7330643775</strong>" data-placement="bottom" href="#Reserve">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -195,7 +237,12 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
