--- a/index.html
+++ b/index.html
@@ -85,12 +85,78 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-6 col-sm-3 align-self-center">
-                    <a role="button" class="btn-sm btn-warning text-decoration-none" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+91 7330643775</strong>" data-placement="bottom" href="#Reserve">Reserve Table</a>
+                    <a role="button" class="btn-sm btn-warning text-decoration-none" data-toggle="modal" data-target="#Reservemodal">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
-
+         <div id="Reservemodal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg" role="content">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title">Reserve a Table</h3>
+                        <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group row">
+                                <div class="col-12 col-sm-2"><label for="Number of Guests" class="form-label">Number of Guests</label></div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt1" value="opt1">
+                                            <label class="form-check-label" for="opt1">1</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt2" value="opt2">
+                                            <label class="form-check-label" for="opt2">2</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt3" value="opt3">
+                                            <label class="form-check-label" for="opt3">3</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt4" value="opt4">
+                                            <label class="form-check-label" for="opt4">4</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt5" value="opt5">
+                                            <label class="form-check-label" for="opt5">5</label>
+                                        </div>
+                                        <div class="col-12 col-sm-1 ml-3">
+                                            <input class="form-check-input" type="radio" name="option" id="opt6" value="opt6">
+                                            <label class="form-check-label" for="opt6">6</label>
+                                        </div>
+                                </div>
+                                <div class="form-group row"> 
+                                    <label class="col-12 col-md-2 col-form-label">Section</label>
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                            <input type="radio" name="options" id="option1" autocomplete="off" checked>Non Smoking
+                                        </label>
+                                        <label class="btn btn-danger">
+                                            <input type="radio" name="options" id="option2" autocomplete="off">Smoking
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="date" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-7 col-md-5">
+                                        <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                    </div>
+                                    <div class="col-5 col-md-5">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                <button type="submit" class="btn btn-primary offset-2">Reserve</button>
+                                <button type="button" class="btn btn-secondary ml-2" data-dismiss="modal">Cancel</button>
+                            </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
     <div class="container">
         <div class="row row-content">
             <div class="col">
@@ -180,58 +246,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="row row-content justify-content-center">
-            <div class="col-12 col-sm-8">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form id="Reserve">
-                            <div class="form-group row">
-                                <div class="col-12 col-sm-2"><label for="Number of Guests" class="form-label">Number of Guests</label></div>
-                                        <div class="col-12 col-sm-1 ml-3">
-                                            <input class="form-check-input" type="radio" name="option" id="opt1" value="opt1">
-                                            <label class="form-check-label" for="opt1">1</label>
-                                        </div>
-                                        <div class="col-12 col-sm-1 ml-3">
-                                            <input class="form-check-input" type="radio" name="option" id="opt2" value="opt2">
-                                            <label class="form-check-label" for="opt2">2</label>
-                                        </div>
-                                        <div class="col-12 col-sm-1 ml-3">
-                                            <input class="form-check-input" type="radio" name="option" id="opt3" value="opt3">
-                                            <label class="form-check-label" for="opt3">3</label>
-                                        </div>
-                                        <div class="col-12 col-sm-1 ml-3">
-                                            <input class="form-check-input" type="radio" name="option" id="opt4" value="opt4">
-                                            <label class="form-check-label" for="opt4">4</label>
-                                        </div>
-                                        <div class="col-12 col-sm-1 ml-3">
-                                            <input class="form-check-input" type="radio" name="option" id="opt5" value="opt5">
-                                            <label class="form-check-label" for="opt5">5</label>
-                                        </div>
-                                        <div class="col-12 col-sm-1 ml-3">
-                                            <input class="form-check-input" type="radio" name="option" id="opt6" value="opt6">
-                                            <label class="form-check-label" for="opt6">6</label>
-                                        </div>
-                                </div>
-                                <div class="form-group row">
-                                <label for="date" class="col-12 col-md-2 col-form-label">Date and Time</label>
-                                <div class="col-7 col-md-5">
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-5 col-md-5">
-                                <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form">
-                                <button type="submit" class="btn btn-primary offset-2">Reserve</button>
-                            </div>
-                            </form>
-                            </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
 
     <footer class="footer">
         <div class="container">
@@ -279,11 +294,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
