--- a/index.html
+++ b/index.html
@@ -196,14 +196,10 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                     <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carousel-pause">
-                            <span class="fa fa-pause"></span>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carousel-play">
-                            <span class="fa fa-play"></span>
-                        </button>
-                    </div>
+                     
+                    <button class="btn btn-danger btn-sm" id="carousel-btn">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -305,11 +301,18 @@
       <script>
         $(document).ready(function(){
             $("#mycarousel").carousel( { interval: 2000 } );
-            $("#carousel-pause").click(function(){
-                $("#mycarousel").carousel('pause');
-            });
-            $("#carousel-play").click(function(){
-                $("#mycarousel").carousel('cycle');
+            $("#carousel-btn").click(function(){
+                if($('#carousel-btn').children('span').hasClass('fa-pause')){
+                    $("#mycarousel").carousel('pause');
+                    $('#carousel-btn').children('span').removeClass('fa-pause');
+                    $('#carousel-btn').children('span').addClass('fa-play');
+                }
+                else{
+                    $("#mycarousel").carousel('cycle');
+                    $('#carousel-btn').children('span').removeClass('fa-play');
+                    $('#carousel-btn').children('span').addClass('fa-pause');
+                }
+
             });
         });
     </script>
